cabal-version:      3.0
name:               myshman
version:            0.1.0.0
synopsis:           Simple compress tool for Myshev labwork
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             qualimock
maintainer:         qualimock@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable myshman
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.0.0,
        myshman

    hs-source-dirs:   app
    default-language: Haskell2010
